--- a/Finished Version/index.html
+++ b/Finished Version/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="video__details">
               <div class="author">
-                <img src="profile.png" alt="" />
+                <img src="http://aninex.com/images/srvc/web_de_icon.png" alt="" />
               </div>
               <div class="title">
                 <h3>
@@ -116,7 +116,7 @@
             </div>
             <div class="video__details">
               <div class="author">
-                <img src="profile.png" alt="" />
+                <img src="http://aninex.com/images/srvc/web_de_icon.png" alt="" />
               </div>
               <div class="title">
                 <h3>Build A Password Generator with React JS - Beginners Tutorial</h3>
@@ -247,7 +247,7 @@
             </div>
             <div class="video__details">
               <div class="author">
-                <img src="profile.png" alt="" />
+                <img src="http://aninex.com/images/srvc/web_de_icon.png" alt="" />
               </div>
               <div class="title">
                 <h3>
@@ -265,7 +265,7 @@
             </div>
             <div class="video__details">
               <div class="author">
-                <img src="profile.png" alt="" />
+                <img src="http://aninex.com/images/srvc/web_de_icon.png" alt="" />
               </div>
               <div class="title">
                 <h3>Build A Password Generator with React JS - Beginners Tutorial</h3>
@@ -395,7 +395,7 @@
             </div>
             <div class="video__details">
               <div class="author">
-                <img src="profile.png" alt="" />
+                <img src="http://aninex.com/images/srvc/web_de_icon.png" alt="" />
               </div>
               <div class="title">
                 <h3>
@@ -413,7 +413,7 @@
             </div>
             <div class="video__details">
               <div class="author">
-                <img src="profile.png" alt="" />
+                <img src="http://aninex.com/images/srvc/web_de_icon.png" alt="" />
               </div>
               <div class="title">
                 <h3>Build A Password Generator with React JS - Beginners Tutorial</h3>
